# djcrud

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  tox.ini  vitest.config.js
.github/workflows/: ci.yml  docs.yml  install-test.yml  release.yml
djcrud-client/: README.md  pyproject.toml
djcrud-client/src/djcrud_client/: api.py  config.py  profile.py  schema.py  server.py
djcrud-client/tests/: test_config.py  test_resolve_registry.py  test_standalone.py
djcrud-mcp/: README.md  pyproject.toml
djcrud-mcp/src/djcrud_client/: __init__.py  __main__.py
djcrud-mcp/src/djcrud_mcp/: __init__.py  __main__.py  api.py  config.py  profiles.py  schema.py  server.py  site.py  viewsets.py
djcrud-mcp/src/djcrud_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  scm_version.json  top_level.txt
djcrud-mcp/src/djcrud_mcp/django/: __init__.py  urls.py  views.py
djcrud-mcp/src/djcrud_mcp_shim/: __init__.py
djcrud-mcp/tests/: test_config.py  test_mcp_profile_site.py  test_profile_defaults.py  test_resolve_registry.py  test_standalone.py
djcrud_example/: settings.py  urls.py  wsgi.py
djcrud_example/example_app/: apps.py  models.py
djcrud_example/example_app/migrations/: 0001_initial.py
docs/: Makefile  build.sh  conf.py  contributing.rst  demo.rst  index.rst  install.rst  migrating-from-djmvc.rst  philosophy.rst
docs/design/: django_mcp.rst  djcrud_mcp.rst
docs/reference/: clonable.rst  index.rst  model.rst  registry.rst  route.rst  router.rst  site.rst  templatetags.rst  view.rst
docs/reference/django_mcp/: index.rst
docs/reference/djcrud_api/: index.rst
docs/reference/djcrud_auth/: index.rst
docs/reference/djcrud_dal/: index.rst
docs/reference/djcrud_dal_topbar/: index.rst
docs/reference/djcrud_debug/: index.rst
docs/reference/djcrud_drf/: index.rst
docs/reference/djcrud_history/: index.rst
docs/reference/djcrud_mcp/: index.rst
docs/reference/mixins/: action.rst  delete.rst  filter.rst  form.rst  index.rst  list.rst  list_action.rst  log.rst  modelform.rst  object.rst  object_modelform.rst  objectform.rst  pagination.rst  tables2.rst  template.rst  template_view.rst
docs/reference/views/: create.rst  delete.rst  detail.rst  form.rst  index.rst  list.rst  list_action.rst  objectform.rst  spa.rst  template.rst  update.rst
docs/tutorial/: agents.rst  drf.rst  frontend.rst  index.rst  permission.rst  routing.rst  spa.rst  views.rst
src/: db.sqlite3
src/django_mcp/: profiles.py  site.py  urls.py  views.py  viewsets.py
src/djcrud/: __init__.py  apps.py  attribute.py  clonable.py  context_processors.py  crud.py  errors.py  handlers.py  introspection.py  media.py  menu.py  middleware.py  mixins.py  model.py  mvc.py  permission.py  permissions.py  redirect.py  registry.py  route.py  router.py  search.py  settings.py  static.py  tags.py  tests_templatetags.py  view.py
src/djcrud.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/djcrud/templatetags/: djcrud.py  djcrud_tags.py
src/djcrud/views/: __init__.py  action.py  create.py  delete.py  detail.py  filter.py  form.py  generic.py  list.py  list_action.py  log.py  modelform.py  object.py  objectform.py  pagination.py  search.py  spa.py  tables2.py  template.py  unpoly.py  update.py
src/djcrud_api/: apps.py  djcrud.py  drf_views.py  login.py  middleware.py  models.py  views.py
src/djcrud_api/migrations/: 0001_initial.py  0002_rename_from_djmvc_swagger.py  0003_rename_from_djmvc_api.py
src/djcrud_auth/: apps.py  crud.py  djcrud.py  models.py  views.py
src/djcrud_bootstrap/: apps.py  tables.py
src/djcrud_bootstrap/templatetags/: djcrud_tags.py
src/djcrud_bulma/: admin.py  apps.py  tables.py
src/djcrud_dal/: apps.py  hooks.py  lookup.py  models.py  views.py
src/djcrud_dal_topbar/: apps.py  djcrud.py  lookup.py  views.py
src/djcrud_debug/: apps.py  djcrud.py  models.py  routing_debug.py  views.py
src/djcrud_drf/: __init__.py  apps.py  log.py  serializers.py  spectacular.py  viewsets.py
src/djcrud_example/: example_urls.py  manage.py  settings.py  urls.py
src/djcrud_example/action_example/: apps.py  djcrud.py  models.py
src/djcrud_example/djcrud_example/: asgi.py  settings.py  urls.py
src/djcrud_example/drf_example/: apps.py  article_viewset.py  djcrud.py  djcrud_drf.py
src/djcrud_example/listaction_example/: apps.py  djcrud.py  models.py
src/djcrud_example/mcp_example/: apps.py  djcrud.py
src/djcrud_example/migrations/: 0002_test_users.py
src/djcrud_example/routing_example/: apps.py  djcrud.py  models.py
src/djcrud_example/search_example/: apps.py  djcrud.py  models.py
src/djcrud_example/security_example/: apps.py  djcrud.py  models.py
src/djcrud_example/spa_example/: apps.py  djcrud.py
src/djcrud_example/views_example/: apps.py  djcrud.py  djcrud_drf.py  example_action.py  example_listaction.py  example_listview.py  models.py
src/djcrud_history/: apps.py  djcrud.py  log.py  models.py  views.py
src/djcrud_mcp/: __init__.py  __main__.py  api.py  api_viewsets.py  apps.py  config.py  djcrud.py  extras.py  profiles.py  routes.py  schema.py  server.py  site.py  tools.py  urls.py  views.py  viewsets.py
src/djcrud_triggers/: __init__.py  apps.py
tests/: README.md  __init__.py  alight_helpers.py  conftest.py  dal_screenshots.py  doc_screenshots.py  settings.py  test_action_example.py  test_actions_column.py  test_app_models.py  test_attribute.py  test_auth.py  test_breadcrumbs.py  test_bulma.py  test_bulma_navbar.py  test_clonable.py  test_controller_views_list.py  test_detail_list.py  test_django_mcp.py  test_djcrud_dal.py  test_djcrud_dal_splinter.py  test_djcrud_dal_topbar.py  test_djcrud_dal_topbar_splinter.py  test_djcrud_mcp.py  test_djcrud_tags.py  test_djcrud_triggers.py  test_docs_screenshots.py  test_drf.py  test_errors.py  test_eval.py  test_example_project.py  test_filter.py  test_form_focus.py  test_hamburger.py  test_i18n.py  test_integration.py  test_list_action.py  test_list_combinations.py  test_listaction_example.py  test_logentry.py  (+36 more)
tests/views/: test_template.py
(+97 files in other folders)
