[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "djcrud-mcp"
dynamic = ["version"]
description = "Compatibility shim for djcrud-client (stdio MCP bridge)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.scripts]
djcrud-client = "djcrud_client.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
root = ".."
